syntax= "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "user.proto";

option go_package = "simple_bank/pb";

message CreateUserRequest {
    string username = 1;
    string fullname = 2;
    string email = 3;
    google.protobuf.Timestamp password_changed_at = 4;
    google.protobuf.Timestamp created_at = 5;
}

message CreateUserResponse {
    User user = 1;

}